Add reset button to counter page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <main class="container">
       <h1>Hello Codex</h1>
       <p class="counter-label">Count: <span id="count">0</span></p>
-      <button id="incrementButton" type="button">+1</button>
+      <div class="button-group">
+        <button id="incrementButton" type="button">+1</button>
+        <button id="resetButton" type="button" class="button-secondary">Reset</button>
+      </div>
     </main>
 
     <script src="script.js"></script>
